@@ -1,3 +1,10 @@
+2007-12-12  Andy Wingo  <wingo@pobox.com>
+
+	* gnome/gobject/gclosure.c
+	(scm_closure_primitive_invoke_without_guile)
+	(scm_closure_primitive_invoke): Leave Guile mode when invoking
+	closures.
+
 2007-12-10  Andy Wingo  <wingo@pobox.com>
 
 	* == Released guile-gnome-platform version 2.15.96 ==
